Refinement: Manual adjustments to CSS and HTML (Layout, Text, Mobile Styles)

--- a/index.html
+++ b/index.html
@@ -351,14 +351,15 @@
             <!-- Features Grid -->
             <div class="p-6 bg-primary gap-10">
 
-                <div class="grid gap-4 mb-10">
+                <div class="grid gap-12">
                     <!-- Feature 1 -->
-                    <div
-                        class="grid bg-primary p-3 rounded-lg shadow-lg text-center transform hover:-translate-y-1 transition-transform">
-                        <div class="font-alfa text-white text-4xl md:text-5xl mb-4 uppercase">Arsenal Completo</div>
+                    <div class="bg-[#e95334] margin-[10px] shadow-lg text-center hover:-translate-y-1">
                         <div
-                            class="text-3xl md:text-4xl text-gray-600 font-bold bg-black text-white rounded px-2 py-1 inline-block margin-15">
-                            Churrasco Perfeito</div>
+                            class="font-alfa text-white text-4xl md:text-5xl margin-top-7px p-12 text-center uppercase justify-center">
+                            Arsenal Completo</div>
+                        <div
+                            class="md:h-45px inline-block backdrop-blur-3xl w-full padding-[5px 5px 5px 5px] md:text-4xl text-gray-600 font-bold text-white bg-black/50 rounded px-2 py-1 inline-block padding-5">
+                            Acessórios completos para seu suporte suspenso.</div>
                     </div>
                     <!-- Feature 2 -->
                     <div
