Update: Nova versão com correções

--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
         <!-- Hero Section -->
         <section id="hero" class="hero-section text-center">
             <h1
-                class="hero-headline font-alfa text-3xl md:text-5xl lg:text-6xl md:text-spacing-1px text-white uppercase leading-tight mb-6">
+                class="hero-headline font-alfa text-4xl md:text-5xl lg:text-6xl md:text-spacing-1px text-white uppercase leading-tight mb-6">
                 O NOSSO XODÓ PRESENTE NAS SUAS COMEMORAÇÕES
             </h1>
-            <h2 class="hero-subheadline font-roboto text-white uppercase text-lg md:text-4xl mb-6">
-                Quando uma BRASA se acende uma nova chaaama revive dentro de nós.<br><b
-                    class="font-roboto weight-bold-800">Essa é a nossa história:</b>
+            <h2 class="hero-subheadline font-roboto text-white uppercase text-2xl md:text-4xl mb-6">
+                Quando <strong>uma BRASA se acende</strong>, <strong>uma chaaama revive</strong> dentro de nós.
             </h2>
+            <h2 class="hero-subheadline font-roboto text-white font-bold uppercase text-2xl md:text-4xl mb-6">Essa é a
+                nossa história:</h2>
 
             <div class="hero-stats flex justify-center md:height-2px gap-8 opacity-90">
                 <div>
@@ -358,8 +359,8 @@
                             class="font-alfa text-white text-4xl md:text-5xl margin-top-7px p-12 text-center uppercase justify-center">
                             Arsenal Completo</div>
                         <div
-                            class="md:h-45px inline-block backdrop-blur-3xl w-full padding-[5px 5px 5px 5px] md:text-4xl text-gray-600 font-bold text-white bg-black/50 rounded px-2 py-1 inline-block padding-5">
-                            Acessórios completos para seu suporte suspenso.</div>
+                            class="md:h-45px text-2xl backdrop-blur-3xl w-full padding-[5px 5px 5px 5px] md:text-4xl text-gray-600 font-bold text-white bg-black/50 rounded px-2 py-1 inline-block padding-5">
+                            Grelhas, Espetos e Acessórios completos para expandir o potencial do suporte suspenso.</div>
                     </div>
                     <!-- Feature 2 -->
                     <div
@@ -388,15 +389,12 @@
                             Níveis de ajuste</div>
                     </div>
                 </div>
-                <h3 class="font-roboto text-2xl md:text-2xl text-white text-center w-2/3 mx-auto margin-top-25px">
-                    Tudo que você precisa para um churrasco completo.
-                </h3>
 
                 <!-- CTA -->
                 <div class="mt-8 text-center">
                     <a href="#form-contato"
                         class="inline-block md:w-1/2 bg-white text-primary lg:w-300px font-alfa text-2xl md:text-4xl py-3 md:py-6 px-8 rounded shadow-xl hover:bg-black hover:text-white transition-all transform hover:scale-105 uppercase">
-                        Confira!
+                        SABER MAIS
                     </a>
                 </div>
             </div>
@@ -418,29 +416,29 @@
                 <input type="hidden" name="utm_term" class="utm-field" />
                 <input type="hidden" name="utm_content" class="utm-field" />
 
-                <h2 class="font-alfa text-2xl md:text-4xl text-black text-center mb-2 uppercase">
-                    Preencha seus dados para receber suporte exclusivo
+                <h2 class="font-alfa text-4xl md:text-4xl text-black text-center mb-2 uppercase">
+                    Preencha seus dados abaixo
                 </h2>
                 <p class="text-gray-700 text-center text-2xl md:text-3xl mb-10">Temos um setor de projetos exclusivo
                     para lhe
                     ajudar...</p>
 
                 <div class="form-group">
-                    <label for="name" class="block text-sm md:text-2xl font-medium text-gray-800 mb-2">Nome *</label>
+                    <label for="name" class="block text-2xl md:text-2xl font-medium text-gray-800 mb-2">Nome *</label>
                     <input type="text" id="name" name="name" placeholder="Seu nome completo"
                         class="w-full px-4 py-3 bg-gray-50 md:text-2xl border-2 border-gray-300 rounded-lg text-gray-900 placeholder-gray-500 focus:border-black focus:outline-none transition-all"
                         required>
                 </div>
 
                 <div class="form-group">
-                    <label for="email" class="block text-sm md:text-2xl font-medium text-gray-800 mb-2">Email *</label>
+                    <label for="email" class="block text-2xl md:text-2xl font-medium text-gray-800 mb-2">Email *</label>
                     <input type="email" id="email" name="email" placeholder="Seu melhor email"
                         class="w-full px-4 py-3 bg-gray-50 md:text-2xl border-2 border-gray-300 rounded-lg text-gray-900 placeholder-gray-500 focus:border-black focus:outline-none transition-all"
                         required>
                 </div>
 
                 <div class="form-group">
-                    <label for="phone" class="block text-sm md:text-2xl font-medium text-gray-800 mb-2">Telefone
+                    <label for="phone" class="block text-2xl md:text-2xl font-medium text-gray-800 mb-2">Telefone
                         (WhatsApp)*</label>
                     <div
                         class="flex border-2 border-gray-300 rounded-lg overflow-hidden focus-within:border-black transition-colors">
@@ -451,14 +449,6 @@
                             class="flex-1 px-4 py-3 bg-gray-50 md:text-2xl text-gray-900 placeholder-gray-500 border-0 focus:outline-none"
                             required>
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="observacao" class="block text-sm md:text-2xl font-medium text-gray-800 mb-2">Gostaria de
-                        comentar algo
-                        sobre o seu projeto ou enviar as medidas? <span class="text-gray-500">(opcional)</span></label>
-                    <textarea id="observacao" name="observacao" placeholder="Digite aqui..." rows="3"
-                        class="w-full px-4 py-3 bg-gray-50 md:text-2xl border-2 border-gray-300 rounded-lg text-gray-900 placeholder-gray-500 focus:border-black focus:outline-none resize-none transition-all"></textarea>
                 </div>
 
                 <button type="submit"
@@ -535,11 +525,21 @@
     </main>
 
     <!-- Footer -->
-    <footer class="text-center pt-10 mt-20 pb-10">
+    <footer class="text-center pt-10 mt-20 pb-10 gap-10">
         <img src="https://s3.1app.com.br/master/project_24727/t0S1gqPQHXVGj8qyYZkhv3LXPfZcpQPI.png"
-            alt="Olho na Brasa Logo" class="h-12 mx-auto mb-6">
-        <p class="text-gray-300 text-sm">Olho na Brasa<br>São José - SC</p>
-        <p class="text-gray-400 text-xs mt-4">© 2024 Olho na Brasa. Todos os direitos reservados.</p>
+            alt="Olho na Brasa Logo" class="h-16 mx-auto mb-8">
+        <p class="text-gray-300 w-[80%] mx-auto text-2xl">Olho na Brasa<br>São José - SC</p>
+        <p class="text-gray-400 w-[80%] mx-auto text-3xs mt-4">© 2025 Olho na Brasa - CNPJ 43.062.681/0001-25 - Itapema
+            - SC. Todos os
+            direitos reservados.</p>
+        <p class="text-gray-400 w-[80%] mx-auto text-3xs mt-4">Desenvolvido por <a href="#" target="_blank"
+                class="text-gray-400">Domion</a> - marketing e soluções em inteligência artificial para E-commerce de
+            alta perfomance.</p>
+        <p class="text-gray-400 w-[80%] mx-auto text-3xs mt-4">O conteúdo deste site e os produtos oferecidos são de
+            inteira responsabilidade da OLHO NA BRASA e não possuem vínculo institucional, afiliação ou endosso do
+            Facebook
+            (Meta), Google, TikTok ou Pinterest. Todas as marcas registradas mencionadas pertencem aos seus respectivos
+            proprietários e são usadas aqui apenas para fins descritivos ou de referência.</p>
     </footer>
 
     <script src="js/script.js"></script>
