Fix: Ajustes de overflow de texto no mobile (Stats, Timer, Features)

--- a/index.html
+++ b/index.html
@@ -62,20 +62,21 @@
             <h2 class="hero-subheadline font-roboto text-white font-bold uppercase text-2xl md:text-4xl mb-6">Essa é a
                 nossa história:</h2>
 
-            <div class="hero-stats flex justify-center md:height-2px gap-8 opacity-90">
+            <div class="hero-stats flex justify-center md:height-2px gap-2 md:gap-8 opacity-90">
                 <div>
-                    <span class="block font-alfa text-3xl md:text-4xl">100K</span>
-                    <span class="text-sm uppercase tracking-widest">Seguidores<br><b
+                    <span class="block font-alfa text-xl md:text-4xl">100K</span>
+                    <span class="text-xs md:text-sm uppercase tracking-widest">Seguidores<br><b
                             class="font-alfa">Instagram</b></span>
                 </div>
                 <div>
-                    <span class="block font-alfa text-3xl md:text-4xl">6k+</span>
-                    <span class="text-sm uppercase tracking-widest">Clientes<br><b
+                    <span class="block font-alfa text-xl md:text-4xl">6k+</span>
+                    <span class="text-xs md:text-sm uppercase tracking-widest">Clientes<br><b
                             class="font-alfa">Satisfeitos</b></span>
                 </div>
                 <div>
-                    <span class="block font-alfa text-3xl md:text-4xl">15</span>
-                    <span class="text-sm uppercase tracking-widest">Anos de<br><b class="font-alfa">Garantia</b></span>
+                    <span class="block font-alfa text-xl md:text-4xl">15</span>
+                    <span class="text-xs md:text-sm uppercase tracking-widest">Anos de<br><b
+                            class="font-alfa">Garantia</b></span>
                 </div>
             </div>
             <!-- Urgency Countdown Section -->
@@ -86,23 +87,23 @@
                         ano! 🔥
                     </p>
                     <div id="countdown"
-                        class="flex justify-center gap-5 font-mono text-4xl md:mb-8 mb-6 md:text-4xl font-bold text-black">
+                        class="flex justify-center gap-2 md:gap-5 font-mono text-2xl md:mb-8 mb-6 md:text-4xl font-bold text-black">
                         <!-- JS will populate this -->
                         <div class="flex flex-col items-center md:translate-y-4 md:margin-top-7px"><span
                                 id="days">00</span><span
-                                class="text-xs md:text-2xl font-roboto font-normal text-gray-500">DIAS</span></div>
-                        <span class="text-xs md:text-2xl font-roboto font-normal text-gray-500">:</span>
+                                class="text-[10px] md:text-2xl font-roboto font-normal text-gray-500">DIAS</span></div>
+                        <span class="text-[10px] md:text-2xl font-roboto font-normal text-gray-500">:</span>
                         <div class="flex flex-col items-center md:translate-y-4 md:margin-top-7px"><span
                                 id="hours">00</span><span
-                                class="text-xs md:text-2xl font-roboto font-normal text-gray-500">HRS</span></div>
-                        <span class="text-xs md:text-2xl font-roboto font-normal text-gray-500">:</span>
+                                class="text-[10px] md:text-2xl font-roboto font-normal text-gray-500">HRS</span></div>
+                        <span class="text-[10px] md:text-2xl font-roboto font-normal text-gray-500">:</span>
                         <div class="flex flex-col items-center md:translate-y-4 md:margin-top-7px"><span
                                 id="minutes">00</span><span
-                                class="text-xs md:text-2xl font-roboto font-normal text-gray-500">MIN</span></div>
-                        <span class="text-xs md:text-2xl font-roboto font-normal text-gray-500">:</span>
+                                class="text-[10px] md:text-2xl font-roboto font-normal text-gray-500">MIN</span></div>
+                        <span class="text-[10px] md:text-2xl font-roboto font-normal text-gray-500">:</span>
                         <div class="flex flex-col items-center md:translate-y-4 md:margin-top-7px"><span
                                 id="seconds">00</span><span
-                                class="text-xs md:text-2xl font-roboto font-normal text-gray-500">SEG</span></div>
+                                class="text-[10px] md:text-2xl font-roboto font-normal text-gray-500">SEG</span></div>
                     </div>
                     <p
                         class="text-center text-2xs md:text-2xl mb-6 md:margin-top-7px lg:margin-top-7px text-gray-500 mt-4">
@@ -356,7 +357,7 @@
                     <!-- Feature 1 -->
                     <div class="bg-[#e95334] margin-[10px] shadow-lg text-center hover:-translate-y-1">
                         <div
-                            class="font-alfa text-white text-4xl md:text-5xl margin-top-7px p-12 text-center uppercase justify-center">
+                            class="font-alfa text-white text-2xl md:text-5xl margin-top-7px p-4 md:p-12 text-center uppercase justify-center">
                             Arsenal Completo</div>
                         <div
                             class="md:h-45px text-2xl backdrop-blur-3xl w-full padding-[5px 5px 5px 5px] md:text-4xl text-gray-600 font-bold text-white bg-black/50 rounded px-2 py-1 inline-block padding-5">
@@ -365,7 +366,7 @@
                     <!-- Feature 2 -->
                     <div
                         class="grid bg-primary p-3 rounded-lg shadow-lg text-center transform hover:-translate-y-1 transition-transform">
-                        <div class="font-alfa text-white text-4xl md:text-5xl mb-2 uppercase">Prático de usar</div>
+                        <div class="font-alfa text-white text-2xl md:text-5xl mb-2 uppercase">Prático de usar</div>
                         <div
                             class="text-3xl md:text-4xl text-gray-600 font-bold bg-black text-white rounded px-2 py-1 inline-block padding-5">
                             Firma
@@ -373,7 +374,7 @@
                     </div>
                     <div
                         class="grid bg-primary p-3 rounded-lg shadow-lg text-center transform hover:-translate-y-1 transition-transform">
-                        <div class="font-alfa text-white text-4xl md:text-5xl mb-4 uppercase">Fácil de Instalar</div>
+                        <div class="font-alfa text-white text-2xl md:text-5xl mb-4 uppercase">Fácil de Instalar</div>
                         <div
                             class="text-3xl md:text-4xl text-gray-600 font-bold bg-black text-white rounded px-9 py-1 padding-5">
                             Apenas 4
@@ -382,7 +383,7 @@
                     <!-- Feature 4 -->
                     <div
                         class="grid bg-primary p-3 rounded-lg shadow-lg text-center transform hover:-translate-y-1 transition-transform">
-                        <div class="font-alfa text-white text-4xl md:text-5xl mb-2 uppercase">Controle Total</div>
+                        <div class="font-alfa text-white text-2xl md:text-5xl mb-2 uppercase">Controle Total</div>
                         <div
                             class="text-3xl md:text-4xl text-gray-600 font-bold bg-black text-white rounded px-2 py-1 inline-block padding-5">
                             3 ou 4
