--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Olho na Brasa - Churrasqueiras Sob Medida</title>
     <meta name="description"
         content="Churrasqueiras Sob Medida que Transformam Você no Mestre do Churrasco. Garantia de 15 anos.">
+    <link rel="icon" href="https://s3.1app.com.br/master/project_24727/9GfHWwfYXkqRRNxbuUWN0egO0m6AtTLZ.png"
+        type="image/png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -540,6 +542,60 @@
             (Meta), Google, TikTok ou Pinterest. Todas as marcas registradas mencionadas pertencem aos seus respectivos
             proprietários e são usadas aqui apenas para fins descritivos ou de referência.</p>
     </footer>
+
+    <!-- Confirmation Modal -->
+    <div id="confirmation-modal" class="fixed inset-0 z-50 hidden overflow-y-auto" aria-labelledby="modal-title"
+        role="dialog" aria-modal="true">
+        <!-- Backdrop -->
+        <div class="fixed inset-0 bg-gray-900 bg-opacity-75 transition-opacity backdrop-blur-sm"></div>
+
+        <div class="flex min-h-full items-center justify-center p-4 text-center sm:p-0">
+            <div
+                class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg border-2 border-primary">
+                <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
+                    <div class="sm:flex sm:items-start">
+                        <div
+                            class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-orange-100 sm:mx-0 sm:h-10 sm:w-10">
+                            <svg class="h-6 w-6 text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" aria-hidden="true">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
+                            </svg>
+                        </div>
+                        <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left w-full">
+                            <h3 class="text-2xl font-alfa leading-6 text-gray-900 uppercase" id="modal-title">Confirme
+                                seus dados</h3>
+                            <div class="mt-4">
+                                <p class="text-sm text-gray-500 mb-4">Verifique se as informações abaixo estão corretas
+                                    para recebermos seu contato:</p>
+
+                                <div class="bg-gray-50 p-4 rounded-md space-y-3 text-left">
+                                    <div>
+                                        <p class="text-xs text-gray-400 uppercase font-bold">Nome</p>
+                                        <p id="modal-name-display" class="text-lg font-medium text-gray-900">-</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-xs text-gray-400 uppercase font-bold">Email</p>
+                                        <p id="modal-email-display" class="text-lg font-medium text-gray-900">-</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-xs text-gray-400 uppercase font-bold">WhatsApp</p>
+                                        <p id="modal-phone-display" class="text-lg font-medium text-gray-900">-</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6 gap-2">
+                    <button type="button" id="btn-confirm-submit"
+                        class="inline-flex w-full justify-center rounded-md bg-green-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-green-500 sm:ml-3 sm:w-auto uppercase tracking-wide transition-colors">Confirmar
+                        e Enviar</button>
+                    <button type="button" id="btn-edit"
+                        class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto uppercase tracking-wide transition-colors">Editar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
