Update: Ajustes no carrossel (4 itens) e texto do Arsenal Completo

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     Exclusivo<b class="text-white"> Olho na Brasa</b></p>
 
                 <!-- Main Product Image -->
-                <div class="z-6 mb-8">
+                <div class="z-6 mb-2">
                     <img src="https://s3.1app.com.br/master/project_24727/Eacchc7n4TondQOqsdbHyjVOsapPdnIt.png"
                         alt="Suporte Suspenso"
                         class="w-full h-auto object-contain drop-shadow-2xl hover:scale-105 transition-transform duration-500">
@@ -320,35 +320,35 @@
                 <div class="carousel-track flex gap-1 animate-scroll-left">
                     <!-- Using PRODUCT items for the marquee feel -->
                     <img src="https://s3.1app.com.br/master/project_24727/mrMhKZJUcDeGizxZ2zDqyFu52MbCiyBu.png"
-                        class="w-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/yBEDX7LqEcSUjMORFVSteUapTqxD3wKC.png"
-                        class="w-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/j1EBAHtTDrvgITyg4BrKScTfwiTIErpV.png"
-                        class="w-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/24XzlU2g30rakcdYlw3X11qlzQBCtatb.png"
-                        class="w-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/YCmbx8VIb5eQucVOpIpjS8s4cNRk7Ynb.png"
-                        class="w-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/UDxmEiYi2ChKrOVr9X6J0CBR4Lcyhk3n.png"
-                        class="w-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/DWQVzRBny3JsuUM10wUFqgmu7XnxDsa8.png"
-                        class="w-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
 
                     <!-- Duplicate for infinite scroll -->
                     <img src="https://s3.1app.com.br/master/project_24727/mrMhKZJUcDeGizxZ2zDqyFu52MbCiyBu.png"
-                        class="h-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/yBEDX7LqEcSUjMORFVSteUapTqxD3wKC.png"
-                        class="h-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/j1EBAHtTDrvgITyg4BrKScTfwiTIErpV.png"
-                        class="h-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/24XzlU2g30rakcdYlw3X11qlzQBCtatb.png"
-                        class="h-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/YCmbx8VIb5eQucVOpIpjS8s4cNRk7Ynb.png"
-                        class="h-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/UDxmEiYi2ChKrOVr9X6J0CBR4Lcyhk3n.png"
-                        class="h-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                     <img src="https://s3.1app.com.br/master/project_24727/DWQVzRBny3JsuUM10wUFqgmu7XnxDsa8.png"
-                        class="h-60 md:h-80">
+                        class="w-24 md:w-32 h-auto object-contain">
                 </div>
             </div>
 
@@ -360,10 +360,11 @@
                     <div class="bg-[#e95334] margin-[10px] shadow-lg text-center hover:-translate-y-1">
                         <div
                             class="font-alfa text-white text-2xl md:text-5xl margin-top-7px p-4 md:p-12 text-center uppercase justify-center">
-                            Arsenal Completo</div>
+                            TENHA UM Arsenal Completo com o Suporte Suspenso</div>
                         <div
-                            class="md:h-45px text-2xl backdrop-blur-3xl w-full padding-[5px 5px 5px 5px] md:text-4xl text-gray-600 font-bold text-white bg-black/50 rounded px-2 py-1 inline-block padding-5">
-                            Grelhas, Espetos e Acessórios completos para expandir o potencial do suporte suspenso.</div>
+                            class="md:h-45px text-xl backdrop-blur-3xl w-full padding-[5px 5px 5px 5px] md:text-4xl text-gray-600 text-white bg-black/50 rounded px-2 py-1 inline-block padding-5">
+                            Trasforme sua experiência com itens exclusivos exclusivamente para serem utilizados com o
+                            Suporte Suspenso e gerar um visual único e elegante.</div>
                     </div>
                     <!-- Feature 2 -->
                     <div
