--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
 
         <section id="contact-form" class="mb-16">
-            <form id="form-contato" name="lead-magnet" method="POST" data-netlify="true" action="/sucesso"
+            <form id="form-contato" name="lead-magnet" method="POST"
                 class="flex flex-col gap-4 p-6 bg-white rounded-2xl shadow-xl">
 
                 <!-- Hidden Fields for Netlify/Sellflux -->
@@ -593,6 +593,47 @@
                         e Enviar</button>
                     <button type="button" id="btn-edit"
                         class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto uppercase tracking-wide transition-colors">Editar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Survey Modal (Quiz) -->
+    <div id="survey-modal" class="fixed inset-0 z-[60] hidden overflow-y-auto" aria-labelledby="survey-title"
+        role="dialog" aria-modal="true">
+        <div class="fixed inset-0 bg-gray-900 bg-opacity-95 transition-opacity backdrop-blur-md"></div>
+
+        <div class="flex min-h-full items-center justify-center p-4 text-center">
+            <div
+                class="relative w-full max-w-2xl transform overflow-hidden rounded-2xl bg-white text-left shadow-2xl transition-all border-4 border-primary">
+
+                <!-- Header / Progress -->
+                <div class="bg-gray-100 px-6 py-4 border-b border-gray-200 flex justify-between items-center">
+                    <div>
+                        <span class="text-xs font-bold text-primary uppercase tracking-wider">Personalização</span>
+                        <h3 class="text-lg font-alfa text-gray-900 leading-none">Perfil do Churrasqueiro</h3>
+                    </div>
+                    <div class="w-1/3 bg-gray-300 rounded-full h-2.5">
+                        <div id="survey-progress" class="bg-primary h-2.5 rounded-full transition-all duration-500"
+                            style="width: 10%"></div>
+                    </div>
+                </div>
+
+                <!-- Question Container -->
+                <div id="survey-container" class="p-6 md:p-10">
+                    <!-- Dynamic Content will be injected here by JS -->
+                </div>
+
+                <!-- Footer / Navigation -->
+                <div class="bg-gray-50 px-6 py-4 flex justify-between items-center border-t border-gray-200">
+                    <button type="button" id="btn-survey-back"
+                        class="text-gray-500 hover:text-gray-700 font-medium text-sm hidden">
+                        ← Voltar
+                    </button>
+                    <button type="button" id="btn-survey-next"
+                        class="ml-auto bg-primary hover:bg-orange-600 text-white font-bold py-3 px-8 rounded-lg shadow-lg transform transition hover:scale-105 disabled:opacity-50 disabled:cursor-not-allowed">
+                        Próximo →
+                    </button>
                 </div>
             </div>
         </div>
